Added two factor authentication

--- a/templates/home.html
+++ b/templates/home.html
@@ -21,6 +21,7 @@
       <li><a href="{% url 'contact' %}">Contact us</a></li>
       <li><a href="{% url 'register' %}">Registration</a></li>
       <li><a href="{% url 'logout' %}">Logout</a></li>
+       <li><a href="{% url 'subscribe' %}">Subscribe to weather forecast</a></li>
     </ul>
 
   </nav>
