--- a/templates/register.html
+++ b/templates/register.html
@@ -320,6 +320,13 @@ small{
 							{{form.password2}}
 						</div>
 
+						<div class="input-group mb-2">
+							<div class="input-group-append">
+								<span class="input-group-text"><i class="fas fa-envelope-square"></i></span>
+							</div>
+							{{form.phone_number}}
+						</div>
+
 
 
 				   		<div class="d-flex justify-content-center mt-3 login_container">
